# HermeticTPC

./: .gitignore  01_WIS_HTPC.ipynb  03_WIS_HTPC.ipynb  CMakeLists.txt  README.md  build-n-vis.sh  events.root  hermeticTPC.cc  vis.sh
analysis/: 01_WIS_HTPC.ipynb  03_WIS_HTPC.ipynb  proc_root_reduced.py  process_backgrounds.py
include/: HTPCAnalysisManager.hh  HTPCDetectorConstruction.hh  HTPCDetectorHit.hh  HTPCEventAction.hh  HTPCEventData.hh  HTPCParticleSource.hh  HTPCPhysicsList.hh  HTPCRunAction.hh  HTPCSensitiveDetector.hh  HTPCStackingAction.hh  HTPCStackingActionMessenger.hh  HTPCSteppingAction.hh  fileMerger.hh
include/.ipynb_checkpoints/: HTPCDetectorConstruction-checkpoint.hh  HTPCSensitiveDetector-checkpoint.hh
include/HTPC/: HTPCDetectorConstruction.hh  HTPCParticleSourceMessenger.hh  HTPCPhysicsList.hh  HTPCPrimaryGeneratorAction.hh  HTPCRunAction.hh  HTPCSteppingAction.hh
include/generators/: Xenon1tAmBeGenerator.hh  Xenon1tDecay0Generator.hh  Xenon1tGenericGenerator.hh  Xenon1tGenericGeneratorParameters.hh  Xenon1tMultiVertexGenerator.hh  Xenon1tMuonGenerator.hh
job_submission/: run_hermeticTPCsingle.sh  submit_hermeticjobs.sh
macros/: neutron.mac  run_Copper_Co60.mac  run_Copper_Cs137.mac  run_Copper_K40.mac  run_Copper_Th232.mac  run_Copper_U238.mac  run_Cryostat_Co60.mac  run_Cryostat_Cs137.mac  run_Cryostat_K40.mac  run_Cryostat_Th232.mac  run_Cryostat_U238.mac  run_PMT_Co60.mac  run_PMT_Th232.mac  run_PMT_U238.mac  run_PTFE_Co60.mac  run_PTFE_Th232.mac  run_PTFE_U238.mac  run_Sapphire_Co60.mac  run_Sapphire_Cs137.mac  run_Sapphire_K40.mac  run_Sapphire_Th232.mac  run_Sapphire_U238.mac  run_Teflon_Co60.mac  run_Teflon_Cs137.mac  run_Teflon_K40.mac  run_Teflon_Th232.mac  run_Teflon_U238.mac
src/: HTPCAnalysisManager.cc  HTPCDetectorConstruction.cc  HTPCDetectorHit.cc  HTPCEventAction.cc  HTPCEventData.cc  HTPCParticleSource.cc  HTPCParticleSourceMessenger.cc  HTPCPhysicsList.cc  HTPCPrimaryGeneratorAction.cc  HTPCRunAction.cc  HTPCSensitiveDetector.cc  HTPCStackingAction.cc  HTPCStackingActionMessenger.cc  HTPCSteppingAction.cc  fileMerger.cc
src/generators/: Xenon1tAmBeGenerator.cc  Xenon1tDecay0Generator.cc  Xenon1tGenericGenerator.cc  Xenon1tMultiVertexGenerator.cc  Xenon1tMuonGenerator.cc
